test/reverseMeasureNonClassical.slq
// args: --run

def main(){
	reverse(measure[int[32]]); /// error
	x:=H(0:ð”¹);
	f:=()mfree=>x; /// TODO
	reverse(f); /// error
}
